Iniciando tela de checkout e de finalização de pagamento

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProductDetailActivity"></activity>
+        <activity android:name=".ProductDetailActivity" />
+        <activity android:name=".ProductCheckoutActivity" />
+        <activity android:name=".PaymentFinalizedActivity"></activity>
     </application>
 
 </manifest>
